src/objects/VOC_Customer_Name__c/VOC_Customer_Name__c.object-meta.xml
<CustomObject>
    <label>VOC Customer Name</label>
    <nameField>
        <displayFormat>VOC-Customer-{0000}</displayFormat>
        <label>VOC Customer Name Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOC Customer Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>