src/objects/VOC_Customer_Name__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VOC Customer Names</relationshipLabel>
    <relationshipName>VOC_Customer_Names</relationshipName>
    <type>Lookup</type>
</CustomField>