src/objects/VOC_Customer_Name__c/fields/Customer_s_Title_Role__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Title_Role__c</fullName>
    <label>Customer’s Title/Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>