src/objects/VOC_Customer_Name__c/fields/Primary_Customer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_s_Email__c</fullName>
    <label>Primary Customer’s Email</label>
    <type>Email</type>
</CustomField>