src/objects/VOC_Customer_Name__c/fields/VOC_Account__c.field-meta.xml
<CustomField>
    <fullName>VOC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOC Account</label>
    <referenceTo>VOC_Accounts__c</referenceTo>
    <relationshipLabel>VOC Customer Names</relationshipLabel>
    <relationshipName>VOC_Customer_Names</relationshipName>
    <type>Lookup</type>
</CustomField>